Fixed the half-hour line in the Full Day/Week view overlapping the hours border by 1 pixel.

--- a/src/foundation/_view-hours.scss
+++ b/src/foundation/_view-hours.scss
@@ -13,7 +13,7 @@ div.hour {
         display: block;
         position: absolute;
         top: 0;
-        left: calc( var(--time-view-hours-width) + var(--spacing) * 2 );
+        left: calc( var(--time-view-hours-width) + ( var(--spacing) * 2 ) + var(--spacing-border-size) );
     }
 
     div.hour-text {
